objects/revcult__Who_Sees_What_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>revcult__Errors__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Errors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>revcult__Had_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Caught Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Run_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>revcult__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>revcult__Use_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Salesforce Files</label>
        <type>Checkbox</type>
    </fields>
    <label>Who Sees What Snapshot</label>
    <listViews>
        <fullName>revcult__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WSWS-{000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Who Sees What Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>